--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,19 +2,110 @@ body{
     background-image: linear-gradient(#43b0f1, #e8eef1);
 }
 
-header{
+nav {
+    backdrop-filter: blur(5px);
+    padding: 15px 0;
+    justify-content: space-evenly;
     display: flex;
-    justify-content: initial;
-    text-decoration: none;
-    color: #fff;
-    padding: 20px 0;
-    font-family: "Fira Sans Condensed", sans-serif;
-    font-weight: 700;
-    font-style: italic;
+    flex-wrap: wrap;
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    align-items: center;
 }
 
 main{
 }
 
-footer{
+a{
+    text-decoration: none;
+    color: black;
+}
+
+/*Footer (botones y texto)*/
+
+footer {
+    text-align: center;
+    font-style: italic;
+    padding: 10px 0;
+}
+
+footer button {
+    background: none;
+    border: none;
+    color: white;
+    font-size: 50px;
+    cursor: pointer;
+    margin: 0 5px;
+}
+
+footer button .fa-x-twitter:hover {
+    color: #474747;
+}
+
+footer button .fa-facebook:hover {
+    color: rgb(24, 24, 197);
+}
+
+footer button .fa-instagram:hover {
+    background: linear-gradient(rgba(253,244,151,1) 25%, rgba(253,89,73,1) 50%, rgba(214,36,159,1) 75%, rgba(40,90,235,1) 100%);
+    border-radius: 5rem;
+}
+
+/*Formulario*/
+
+.contact_form {
+    width: 80%;
+    height: auto;
+    margin: 80px auto;
+    border-radius: 10px;
+    padding-top: 30px;
+    padding-bottom: 20px;
+    background-color: #fbfbfb;
+    padding-left: 20px;
+    justify-content: center;
+}
+
+input, textarea {
+    background-color: #fbfbfb;
+    width: 90%;
+    border-radius: 5px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #353935;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    padding-top: 7px;
+}
+
+textarea {
+    height: auto;
+    padding-left: 10px;
+    padding-top: 15px;
+    margin-bottom: 20px;
+}
+
+label {
+    display: block;
+    font-size: 14px;
+}
+
+button#enviar {
+    text-transform: uppercase;
+    cursor: pointer;
+    display: flex;
+}
+
+span {
+    color: #c01d1d;
+}
+
+.aviso {
+    font-size: 13px;
+    color: #c01d1d;
+}
+
+legend {
+    font-size: 16px;
+    padding-bottom: 30px;
 }
